syntax = "proto3";

option csharp_namespace = "GrpcPractice2";

package jwtGeneratorProto;

service JwtGenerator {
  rpc GetJWToken (TokenRequest) returns (TokenData);
}

message TokenRequest {
  string name = 1;
  string password = 2;
}

message TokenData {
  string token = 1;
}